--- a/package.json
+++ b/package.json
@@ -1,15 +1,87 @@
 {
-  "license":"MIT",
+  "license": "MIT",
+  "main":"src/index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=smth nodemon ./src/index.js",
+    "start": "nodemon --exec babel-node src/index.js",
     "lint": " ./node_modules/.bin/eslint ./src/*/**.js",
     "lint-fix": "./node_modules/.bin/eslint ./src/*/**.js --fix",
-    "test": "jest"
-
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "eslint": "^5.16.0",
     "jest": "^24.7.0",
     "nodemon": "^1.18.10"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.4.3",
+    "babel-jest": "^24.7.1"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "es6": true,
+      "node": true,
+      "jest": true
+    },
+    "extends": "eslint:recommended",
+    "globals": {
+      "Atomics": "readonly",
+      "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+      "ecmaVersion": 2018,
+      "sourceType": "module"
+    },
+    "rules": {
+      "space-infix-ops": [
+        2,
+        {
+          "int32Hint": false
+        }
+      ],
+      "no-console":"warn",
+      "no-alert":"warn",
+      "comma-spacing": [
+        "error",
+        {
+          "before": false,
+          "after": true
+        }
+      ],
+      "comma-dangle": [
+        "error",
+        {
+          "arrays": "never",
+          "objects": "never",
+          "imports": "never",
+          "exports": "never",
+          "functions": "never"
+        }
+      ],
+      "no-unused-labels": "warn",
+      "no-unused-vars": "warn",
+      "space-before-function-paren": [
+        "error",
+        "always"
+      ],
+      "indent": [
+        "error",
+        2
+      ],
+      "linebreak-style": [
+        "error",
+        "unix"
+      ],
+      "no-trailing-spaces":"error",
+      "no-multi-spaces":"error",
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "semi": ["error", "never"]
+    }
   }
 }
