--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "license": "MIT",
-  "main":"src/index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "nodemon --exec babel-node src/index.js",
     "lint": " ./node_modules/.bin/eslint ./src*/**.js",
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "eslint": "^5.16.0",
+    "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.2.1",
     "jest": "^24.7.0",
+    "lodash": "^4.17.11",
+    "mongodb": "^3.2.2",
     "nodemon": "^1.18.10"
   },
   "devDependencies": {
