--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
+    "bcrypt": "^3.0.5",
+    "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.3",
     "eslint": "^5.16.0",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
+    "express-session": "^1.15.6",
     "graphql": "^14.2.1",
     "jest": "^24.7.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.2.2",
+    "mongoose": "^5.5.0",
     "nodemon": "^1.18.10"
   },
   "devDependencies": {
