--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "license": "MIT",
   "main": "src/index.js",
   "scripts": {
-    "start": "env-cmd ./envs/dev.env nodemon --exec babel-node src/index.js",
+    "start": "env-cmd ./envs/dev.env nodemon --no-colors --exec babel-node src/index.js",
     "lint": " ./node_modules/.bin/eslint ./*/**.js",
     "lint-fix": "./node_modules/.bin/eslint ./*/**.js --fix",
     "test": "jest",
@@ -10,11 +10,13 @@
     "dev": "env-cmd ./envs/dev.env webpack-dev-server --progress --mode development --config webpack.config.dev.js"
   },
   "dependencies": {
-    "bcrypt": "^3.0.5",
-    "body-parser": "^1.18.3",
-    "connect-mongo": "^2.0.3",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
+    "bcrypt": "^3.0.5",
+    "body-parser": "^1.18.3",
+    "colors": "^1.3.3",
+    "connect-mongo": "^2.0.3",
+    "cors": "^2.8.5",
     "env-cmd": "^8.0.2",
     "eslint": "^5.16.0",
     "express": "^4.16.4",
@@ -25,7 +27,7 @@
     "jest": "^24.7.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.2.2",
-    "mongoose": "^5.5.0",
+    "mongoose": "5.2.8",
     "nodemon": "^1.18.10",
     "source-map-loader": "^0.2.4",
     "webpack": "^4.29.6",
