--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dev": "env-cmd ./envs/dev.env webpack-dev-server --progress --mode development --config webpack.config.dev.js"
   },
   "dependencies": {
+    "apollo-server": "^2.4.8",
+    "apollo-server-express": "^2.4.8",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
     "bcrypt": "^3.0.5",
@@ -22,6 +24,7 @@
     "express-graphql": "^0.7.1",
     "express-session": "^1.15.6",
     "graphql": "^14.2.1",
+    "graphql-tools": "^4.0.4",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.0",
     "lodash": "^4.17.11",
