--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "env-cmd ./envs/dev.env webpack-dev-server --progress --mode development --config webpack.config.dev.js"
   },
   "dependencies": {
+    "apollo-server-express": "^2.4.8",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
     "bcrypt": "^3.0.5",
