--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-graphql": "^0.7.1",
     "express-session": "^1.15.6",
     "graphql": "^14.2.1",
+    "graphql-tag": "^2.10.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.0",
     "lodash": "^4.17.11",
