--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "env-cmd ./envs/dev.env nodemon --no-colors --exec babel-node src/index.js",
-    "lint": " ./node_modules/.bin/eslint './*/**.js'",
-    "lint-fix": "./node_modules/.bin/eslint './*/**.js' --fix",
+    "lint": " ./node_modules/.bin/eslint './**/*.js'",
+    "lint-fix": "./node_modules/.bin/eslint './**/*.js' --fix",
     "test": "jest",
     "coverage": "jest --coverage",
     "dev": "env-cmd ./envs/dev.env webpack-dev-server --progress --mode development --config webpack.config.dev.js"
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "colors": "^1.3.3",
     "connect-mongo": "^2.0.3",
+    "dotenv-webpack": "^1.7.0",
     "env-cmd": "^8.0.2",
     "eslint": "^5.16.0",
     "express": "^4.16.4",
