--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.0",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "graphql-tools": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
