--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@types/mongodb": "^3.5.4",
     "@types/mongoose": "^5.7.8",
     "eslint": "^6.8.0",
-    "eslint-plugin-node": "^11.1.0"
+    "eslint-plugin-node": "^11.1.0",
+    "swagger-ui-express": "^4.1.4",
+    "yamljs": "^0.3.0"
   },
   "engines": {
     "node": "10.18.1"
